crates/wac-parser/tests/resolution/fail/duplicate-record-field.wac
package test:comp;

type x = string;

record r {
    a: s8,
    b: u8,
    c: x,
    b: string,
}